nabla_frontend/src/parser/snapshots/nabla_frontend__parser__tests__comma_after_field.snap
---
source: nabla_frontend/src/parser/tests.rs
expression: program
---
Program {
    globals: [
        Def(
            Def {
                def_kw: AstInfo {
                    prelude: Prelude {
                        comments: [],
                        range: 1..1,
                    },
                    range: 1..2,
                },
                name: Some(
                    Ident {
                        name: "x",
                        info: AstInfo {
                            prelude: Prelude {
                                comments: [],
                                range: 2..3,
                            },
                            range: 3..4,
                        },
                    },
                ),
                colon: None,
                type_expr: None,
                eq: Some(
                    AstInfo {
                        prelude: Prelude {
                            comments: [],
                            range: 4..5,
                        },
                        range: 5..6,
                    },
                ),
                expr: Some(
                    Single(
                        Struct(
                            Struct {
                                lcurly: AstInfo {
                                    prelude: Prelude {
                                        comments: [],
                                        range: 7..7,
                                    },
                                    range: 7..8,
                                },
                                fields: [
                                    Ok(
                                        StructField {
                                            name: Ident {
                                                name: "test",
                                                info: AstInfo {
                                                    prelude: Prelude {
                                                        comments: [],
                                                        range: 9..9,
                                                    },
                                                    range: 9..10,
                                                },
                                            },
                                            colon: Some(
                                                AstInfo {
                                                    prelude: Prelude {
                                                        comments: [],
                                                        range: 10..10,
                                                    },
                                                    range: 10..11,
                                                },
                                            ),
                                            type_expr: Some(
                                                Single(
                                                    Named(
                                                        Named {
                                                            name: Ident {
                                                                name: "String",
                                                                info: AstInfo {
                                                                    prelude: Prelude {
                                                                        comments: [],
                                                                        range: 12..12,
                                                                    },
                                                                    range: 12..13,
                                                                },
                                                            },
                                                            inner_names: [],
                                                            expr: None,
                                                            info: AstInfo {
                                                                prelude: Prelude {
                                                                    comments: [],
                                                                    range: 12..12,
                                                                },
                                                                range: 12..13,
                                                            },
                                                        },
                                                    ),
                                                ),
                                            ),
                                            eq: None,
                                            expr: None,
                                            alias: None,
                                            info: AstInfo {
                                                prelude: Prelude {
                                                    comments: [],
                                                    range: 8..9,
                                                },
                                                range: 9..13,
                                            },
                                        },
                                    ),
                                    Err(
                                        StructFieldError {
                                            info: AstInfo {
                                                prelude: Prelude {
                                                    comments: [],
                                                    range: 13..13,
                                                },
                                                range: 13..14,
                                            },
                                        },
                                    ),
                                ],
                                rcurly: Some(
                                    AstInfo {
                                        prelude: Prelude {
                                            comments: [],
                                            range: 14..15,
                                        },
                                        range: 15..16,
                                    },
                                ),
                                info: AstInfo {
                                    prelude: Prelude {
                                        comments: [],
                                        range: 7..7,
                                    },
                                    range: 7..16,
                                },
                            },
                        ),
                    ),
                ),
                info: AstInfo {
                    prelude: Prelude {
                        comments: [],
                        range: 1..1,
                    },
                    range: 1..17,
                },
            },
        ),
    ],
    info: AstInfo {
        prelude: Prelude {
            comments: [],
            range: 0..1,
        },
        range: 1..18,
    },
}
