nabla_frontend/src/parser/snapshots/nabla_frontend__parser__tests__ignore_expr_error.snap
---
source: nabla_frontend/src/parser/tests.rs
expression: ast
---
Ast {
    globals: [
        Def(
            Def {
                def_kw: AstInfo {
                    prelude: Prelude {
                        comments: [],
                        range: 0..0,
                    },
                    range: 0..1,
                },
                name: Some(
                    Ident {
                        name: "x",
                        info: AstInfo {
                            prelude: Prelude {
                                comments: [],
                                range: 1..2,
                            },
                            range: 2..3,
                        },
                    },
                ),
                colon: None,
                type_expr: None,
                eq: Some(
                    AstInfo {
                        prelude: Prelude {
                            comments: [],
                            range: 3..4,
                        },
                        range: 4..5,
                    },
                ),
                expr: Some(
                    Error(
                        AstInfo {
                            prelude: Prelude {
                                comments: [],
                                range: 6..6,
                            },
                            range: 6..7,
                        },
                    ),
                ),
                info: AstInfo {
                    prelude: Prelude {
                        comments: [],
                        range: 0..0,
                    },
                    range: 0..7,
                },
            },
        ),
    ],
    info: AstInfo {
        prelude: Prelude {
            comments: [],
            range: 0..0,
        },
        range: 0..8,
    },
}
