nabla_frontend/src/parser/snapshots/nabla_frontend__parser__tests__ignore_use_error.snap
---
source: nabla_frontend/src/parser/tests.rs
expression: program
---
Program {
    globals: [
        Use(
            Use {
                use_kw: AstInfo {
                    range: 0..1,
                },
                name: Some(
                    Ident {
                        name: "x",
                        info: AstInfo {
                            range: 2..3,
                        },
                    },
                ),
                body: Some(
                    UseBody {
                        double_colon: AstInfo {
                            range: 3..4,
                        },
                        kind: Some(
                            Multiple(
                                UseItems {
                                    lcurly: AstInfo {
                                        range: 4..5,
                                    },
                                    items: [
                                        UseItem {
                                            name: Ident {
                                                name: "y",
                                                info: AstInfo {
                                                    range: 5..6,
                                                },
                                            },
                                            body: Some(
                                                UseBody {
                                                    double_colon: AstInfo {
                                                        range: 6..7,
                                                    },
                                                    kind: Some(
                                                        Error(
                                                            AstInfo {
                                                                range: 7..8,
                                                            },
                                                        ),
                                                    ),
                                                    info: AstInfo {
                                                        range: 6..8,
                                                    },
                                                },
                                            ),
                                            alias: None,
                                            info: AstInfo {
                                                range: 5..8,
                                            },
                                        },
                                    ],
                                    rcurly: Some(
                                        AstInfo {
                                            range: 8..9,
                                        },
                                    ),
                                    info: AstInfo {
                                        range: 4..9,
                                    },
                                },
                            ),
                        ),
                        info: AstInfo {
                            range: 3..9,
                        },
                    },
                ),
                info: AstInfo {
                    range: 0..9,
                },
            },
        ),
    ],
    info: AstInfo {
        range: 0..10,
    },
}
