nabla_frontend/src/parser/snapshots/nabla_frontend__parser__tests__ignore_use_kind_error.snap
---
source: nabla_frontend/src/parser/tests.rs
expression: program
---
Program {
    globals: [
        Use(
            Use {
                use_kw: AstInfo {
                    prelude: Prelude {
                        comments: [],
                        range: 0..0,
                    },
                    range: 0..1,
                },
                name: Some(
                    Ident {
                        name: "x",
                        info: AstInfo {
                            prelude: Prelude {
                                comments: [],
                                range: 1..2,
                            },
                            range: 2..3,
                        },
                    },
                ),
                body: Some(
                    UseBody {
                        double_colon: AstInfo {
                            prelude: Prelude {
                                comments: [],
                                range: 3..3,
                            },
                            range: 3..4,
                        },
                        kind: Some(
                            Multiple(
                                UseItems {
                                    lcurly: AstInfo {
                                        prelude: Prelude {
                                            comments: [],
                                            range: 4..4,
                                        },
                                        range: 4..5,
                                    },
                                    items: [
                                        Ok(
                                            UseItem {
                                                name: Ident {
                                                    name: "y",
                                                    info: AstInfo {
                                                        prelude: Prelude {
                                                            comments: [],
                                                            range: 5..5,
                                                        },
                                                        range: 5..6,
                                                    },
                                                },
                                                body: Some(
                                                    UseBody {
                                                        double_colon: AstInfo {
                                                            prelude: Prelude {
                                                                comments: [],
                                                                range: 6..6,
                                                            },
                                                            range: 6..7,
                                                        },
                                                        kind: Some(
                                                            Error(
                                                                AstInfo {
                                                                    prelude: Prelude {
                                                                        comments: [],
                                                                        range: 7..7,
                                                                    },
                                                                    range: 7..8,
                                                                },
                                                            ),
                                                        ),
                                                        info: AstInfo {
                                                            prelude: Prelude {
                                                                comments: [],
                                                                range: 6..6,
                                                            },
                                                            range: 6..8,
                                                        },
                                                    },
                                                ),
                                                alias: None,
                                                info: AstInfo {
                                                    prelude: Prelude {
                                                        comments: [],
                                                        range: 5..5,
                                                    },
                                                    range: 5..8,
                                                },
                                            },
                                        ),
                                    ],
                                    rcurly: Some(
                                        AstInfo {
                                            prelude: Prelude {
                                                comments: [],
                                                range: 8..8,
                                            },
                                            range: 8..9,
                                        },
                                    ),
                                    info: AstInfo {
                                        prelude: Prelude {
                                            comments: [],
                                            range: 4..4,
                                        },
                                        range: 4..9,
                                    },
                                },
                            ),
                        ),
                        info: AstInfo {
                            prelude: Prelude {
                                comments: [],
                                range: 3..3,
                            },
                            range: 3..9,
                        },
                    },
                ),
                info: AstInfo {
                    prelude: Prelude {
                        comments: [],
                        range: 0..0,
                    },
                    range: 0..9,
                },
            },
        ),
    ],
    info: AstInfo {
        prelude: Prelude {
            comments: [],
            range: 0..0,
        },
        range: 0..10,
    },
}
